--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <!-- Register spinner theme -->
+    <!--
+    <style name="SpinnerTheme">
+        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:fontFamily">@font/ubuntu</item>
+    </style>
+    -->
+
 </resources>
