--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorCapgeminiBlue"
     tools:context=".StartActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/abstract_shape_4_deep_purple"
         android:gravity="center"
         android:padding="8dp">
 
@@ -21,7 +19,7 @@
             android:fontFamily="@font/ubuntu"
             android:gravity="center"
             android:text="Chat App"
-            android:textColor="@color/colorGray"
+            android:textColor="@color/colorTechRed"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -29,16 +27,17 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorVibrantBlue"
+            android:backgroundTint="@color/colorCapgeminiBlue"
             android:fontFamily="@font/ubuntu"
             android:text="login"
-            android:textColor="@color/colorGray" />
+            android:textColor="@color/colorGray"
+            android:layout_marginBottom="8dp"/>
 
         <Button
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorVibrantBlue"
+            android:backgroundTint="@color/colorCapgeminiBlue"
             android:fontFamily="@font/ubuntu"
             android:text="register"
             android:textColor="@color/colorGray" />
