--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorZestGreen">#95e616</color>
     <color name="colorGray">#ececec</color>
 
+    <color name="colorTransparentDark">#90000000</color>
+
 </resources>
