--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,11 @@
         android:layout_below="@+id/toolbar"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:paddingStart="32dp"
+        android:paddingLeft="32dp"
+        android:paddingEnd="32dp"
+        android:paddingRight="32dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -53,14 +57,14 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/ubuntu"
             android:hint="Display name"
-            android:inputType="textPersonName" />
+            android:inputType="textCapWords|textPersonName" />
 
         <Button
             android:id="@+id/btn_reg_cred"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:backgroundTint="@color/colorCapgeminiBlue"
+            android:background="@drawable/button_rounded_blue"
             android:fontFamily="@font/ubuntu"
             android:text="register with credentials"
             android:textColor="@color/colorGray" />
@@ -77,7 +81,7 @@
             android:id="@+id/btn_reg_anon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorCapgeminiBlue"
+            android:background="@drawable/button_rounded_blue"
             android:fontFamily="@font/ubuntu"
             android:text="register anonymously"
             android:textColor="@color/colorGray" />
