--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +8,42 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/common_toolbar" />
+
+    <LinearLayout
+        android:id="@+id/layout_subject"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:background="@color/colorTransparentDark"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingStart="32dp"
+        android:paddingLeft="32dp"
+        android:paddingEnd="32dp"
+        android:paddingRight="32dp">
+
+        <EditText
+            android:id="@+id/editText_new_subject"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/ubuntu"
+            android:hint="Subject"
+            android:inputType="textCapSentences"
+            android:textColor="@color/colorGray"
+            android:textColorHint="@color/colorGray" />
+
+        <Button
+            android:id="@+id/btn_new_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/button_rounded_gray"
+            android:fontFamily="@font/ubuntu"
+            android:text="Start Message" />
+
+    </LinearLayout>
 
 </RelativeLayout>
