--- a/app/src/main/res/layout/fragment_champions.xml
+++ b/app/src/main/res/layout/fragment_champions.xml
@@ -3,12 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorVibrantBlue"
     tools:context=".fragments.ChampionsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fontFamily="@font/ubuntu"
+        android:gravity="center"
+        android:text="Champions Only"
+        android:textColor="@color/colorGray"
+        android:textSize="50sp" />
 
 </FrameLayout>
