Updated screens for prototype demo

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -81,6 +81,7 @@
             android:id="@+id/btn_reg_anon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/button_rounded_blue"
             android:fontFamily="@font/ubuntu"
             android:text="register anonymously"
