--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:fontFamily="@font/ubuntu"
         android:gravity="center"
-        android:text="Chats"
+        android:text="My Chats"
         android:textColor="@color/colorTechRed"
         android:textSize="50sp" />
 
