Implemented chats fragment with adapter

--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -7,6 +7,7 @@
         android:id="@+id/item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
         android:padding="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -16,24 +17,29 @@
             android:src="@drawable/spade_red" />
 
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/main_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/profile_image"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
             android:layout_toEndOf="@id/profile_image"
             android:layout_toRightOf="@id/profile_image"
+            android:ellipsize="end"
             android:fontFamily="@font/ubuntu"
+            android:maxLines="1"
             android:text="@string/placeholder_string"
             android:textSize="18sp" />
 
+        <!--
         <TextView
-            android:id="@+id/status"
+            android:id="@+id/small_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/username"
+            android:layout_alignBottom="@id/main_text"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_marginEnd="10dp"
@@ -42,17 +48,21 @@
             android:maxLines="1"
             android:text="@string/placeholder_string"
             android:textSize="14sp" />
+            -->
 
         <TextView
-            android:id="@+id/last_message"
+            android:id="@+id/sub_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/profile_image"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
             android:layout_marginBottom="5dp"
             android:layout_toEndOf="@id/profile_image"
             android:layout_toRightOf="@id/profile_image"
+            android:ellipsize="end"
             android:fontFamily="@font/ubuntu"
             android:maxLines="1"
             android:text="@string/placeholder_string"
@@ -68,6 +78,18 @@
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
             android:src="@drawable/ic_chevron_right_blue_24dp" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/unread"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/background_unread"
+            android:visibility="visible" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/online"
@@ -100,7 +122,9 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/item"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:background="@color/colorGray" />
 
