--- a/app/src/main/res/layout/item_divider.xml
+++ b/app/src/main/res/layout/item_divider.xml
@@ -3,13 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/header"
+    <!--
+    <ImageView
+        android:id="@+id/divider_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:src="@drawable/ic_group_blue_24dp" />
+        -->
+
+    <TextView
+        android:id="@+id/divider_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/ubuntu"
         android:gravity="center"
-        android:text="..."
-        android:textSize="32sp" />
+        android:text="Champions"
+        android:textColor="@color/colorCapgeminiBlue"
+        android:textSize="14sp" />
+
+    <!--
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/header"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/colorGray" />
+        -->
 
 </RelativeLayout>
