Got profile image upload working

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,6 +11,10 @@
         android:title="Administration"
         app:showAsAction="never" />
     <item
+        android:id="@+id/about"
+        android:title="About"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/logout"
         android:title="Logout"
         app:showAsAction="never" />
