--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,14 @@
         <item name="fontFamily">@font/ubuntu</item>
     </style>
 
+    <!-- button styles -->
+    <style name="ColouredButtonBlue" parent="Base.Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/colorCapgeminiBlue</item>
+        <!--<item name="colorControlHighlight">@color/myRed</item>-->
+    </style>
+    <style name="ColouredButtonRed" parent="Base.Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/colorTechRed</item>
+        <!--<item name="colorControlHighlight">@color/myRed</item>-->
+    </style>
+
 </resources>
