--- a/app/src/main/res/drawable/background_rounded_blue.xml
+++ b/app/src/main/res/drawable/background_rounded_blue.xml
@@ -3,5 +3,8 @@
     android:shape="rectangle">
     <solid android:color="@color/colorCapgeminiBlue" />
     <corners android:radius="32dp" />
+    <padding
+        android:left="10dp"
+        android:right="10dp" />
 
 </shape>
