--- a/app/src/main/res/drawable/background_rounded_gray.xml
+++ b/app/src/main/res/drawable/background_rounded_gray.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorGray" />
-    <corners android:radius="32dp" />
+    <corners android:radius="16dp" />
+    <padding
+        android:left="10dp"
+        android:right="10dp" />
 
 </shape>
