--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,10 +53,10 @@
 
         <Button
             android:id="@+id/btn_login_cred"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/button_rounded_blue"
+            android:background="@drawable/background_rounded_blue"
             android:fontFamily="@font/ubuntu"
             android:text="login with credentials"
             android:textColor="@color/colorGray" />
@@ -70,9 +70,9 @@
 
         <Button
             android:id="@+id/btn_login_anon"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_rounded_blue"
+            android:background="@drawable/background_rounded_blue"
             android:fontFamily="@font/ubuntu"
             android:text="login anonymously"
             android:textColor="@color/colorGray" />
